// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bend/crossing metrics > Boolean Algebra 1`] = `
{
  "H": 290,
  "bends": 8,
  "bent": 4,
  "crossings": 1,
  "straight": 6,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Breaker Failure (SEL-751A) 1`] = `
{
  "H": 300,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 6,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Combined Logic (CBFPS) 1`] = `
{
  "H": 225,
  "bends": 10,
  "bent": 5,
  "crossings": 0,
  "straight": 3,
  "wires": 8,
}
`;

exports[`Bend/crossing metrics > Combined Options 1`] = `
{
  "H": 320,
  "bends": 10,
  "bent": 5,
  "crossings": 0,
  "straight": 2,
  "wires": 7,
}
`;

exports[`Bend/crossing metrics > Complex Protection (SEL) 1`] = `
{
  "H": 720,
  "bends": 18,
  "bent": 9,
  "crossings": 0,
  "straight": 15,
  "wires": 24,
}
`;

exports[`Bend/crossing metrics > Complex Protection 1`] = `
{
  "H": 210,
  "bends": 6,
  "bent": 3,
  "crossings": 0,
  "straight": 5,
  "wires": 8,
}
`;

exports[`Bend/crossing metrics > Differential Protection 1`] = `
{
  "H": 260,
  "bends": 4,
  "bent": 2,
  "crossings": 0,
  "straight": 5,
  "wires": 7,
}
`;

exports[`Bend/crossing metrics > Generic Block (FB) 1`] = `
{
  "H": 190,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 6,
  "wires": 6,
}
`;

exports[`Bend/crossing metrics > Hidden Dots 1`] = `
{
  "H": 290,
  "bends": 4,
  "bent": 2,
  "crossings": 0,
  "straight": 8,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Input Bars 1`] = `
{
  "H": 270,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 2,
  "wires": 6,
}
`;

exports[`Bend/crossing metrics > Inversion Bubbles 1`] = `
{
  "H": 280,
  "bends": 18,
  "bent": 8,
  "crossings": 5,
  "straight": 1,
  "wires": 9,
}
`;

exports[`Bend/crossing metrics > Labelled Gates 1`] = `
{
  "H": 565,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 10,
  "wires": 14,
}
`;

exports[`Bend/crossing metrics > Launch Interlock 1`] = `
{
  "H": 655,
  "bends": 14,
  "bent": 7,
  "crossings": 0,
  "straight": 8,
  "wires": 15,
}
`;

exports[`Bend/crossing metrics > Layout Options 1`] = `
{
  "H": 315,
  "bends": 6,
  "bent": 3,
  "crossings": 0,
  "straight": 6,
  "wires": 9,
}
`;

exports[`Bend/crossing metrics > Mixed Logic 1`] = `
{
  "H": 350,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 8,
  "wires": 12,
}
`;

exports[`Bend/crossing metrics > Motor Control Circuit 1`] = `
{
  "H": 340,
  "bends": 10,
  "bent": 5,
  "crossings": 1,
  "straight": 4,
  "wires": 9,
}
`;

exports[`Bend/crossing metrics > NOT Gate 1`] = `
{
  "H": 90,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 2,
  "wires": 2,
}
`;

exports[`Bend/crossing metrics > Named Gates 1`] = `
{
  "H": 375,
  "bends": 4,
  "bent": 2,
  "crossings": 0,
  "straight": 8,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Nested NOT 1`] = `
{
  "H": 90,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Overcurrent Protection 1`] = `
{
  "H": 225,
  "bends": 2,
  "bent": 1,
  "crossings": 0,
  "straight": 6,
  "wires": 7,
}
`;

exports[`Bend/crossing metrics > Reactor Scram Matrix 1`] = `
{
  "H": 960,
  "bends": 22,
  "bent": 11,
  "crossings": 0,
  "straight": 22,
  "wires": 33,
}
`;

exports[`Bend/crossing metrics > SEL Function Blocks 1`] = `
{
  "H": 300,
  "bends": 2,
  "bent": 1,
  "crossings": 0,
  "straight": 9,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > SR Latch (Q and NQ) 1`] = `
{
  "H": 135,
  "bends": 2,
  "bent": 1,
  "crossings": 0,
  "straight": 3,
  "wires": 4,
}
`;

exports[`Bend/crossing metrics > Shared Intermediates 1`] = `
{
  "H": 255,
  "bends": 10,
  "bent": 5,
  "crossings": 2,
  "straight": 7,
  "wires": 12,
}
`;

exports[`Bend/crossing metrics > Simple AND Gate 1`] = `
{
  "H": 110,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Simple OR Gate 1`] = `
{
  "H": 110,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Square Ports 1`] = `
{
  "H": 110,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Streamlined Ports 1`] = `
{
  "H": 165,
  "bends": 2,
  "bent": 1,
  "crossings": 0,
  "straight": 5,
  "wires": 6,
}
`;

exports[`Bend/crossing metrics > Styled by ID 1`] = `
{
  "H": 340,
  "bends": 4,
  "bent": 2,
  "crossings": 0,
  "straight": 6,
  "wires": 8,
}
`;

exports[`Bend/crossing metrics > Three-Input AND 1`] = `
{
  "H": 140,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 4,
  "wires": 4,
}
`;

exports[`Bend/crossing metrics > Trip Logic 1`] = `
{
  "H": 210,
  "bends": 6,
  "bent": 3,
  "crossings": 0,
  "straight": 5,
  "wires": 8,
}
`;

exports[`Bend/crossing metrics > Triple OR 1`] = `
{
  "H": 140,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 4,
  "wires": 4,
}
`;
